# axum-zero2prod

./: Cargo.toml  Dockerfile
.sqlx/: query-e028333a886e2eb0b2c5fb789b8e4cfd0c045ebabe06d9bf18c95f52a85c4695.json
configuration/: base.yaml
migrations/: 20240519194340_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
